<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2016 The Android Open Source Project
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
         http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="url_github">https://github.com/wonderkiln/camerakit-android</string>
    <string name="url_website">http://camerakit.website</string>

    <string name="about_dialog_title">About</string>
    <string name="about_dialog_message">CameraKit is open source software distributed under the MIT license.\n\nFor more details visit www.camerakit.website/.</string>


    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="title_activity_set_up">SetUpActivity</string>
    <string name="project_name">项目名称</string>

    <string name="str_main_titile">施工记录</string>
    <string name="jtv_project_name">项目名称：</string>
    <string name="jtv_place">施工单位：</string>
    <string name="jtv_weather">天气状况：</string>
    <string name="jtv_logitude">经度：</string>
    <string name="jtv_latitude">纬度：</string>
    <string name="jtv_time">当前日期：</string>
    <string name="jtv_address">位置信息：</string>
    <string name="jtv_altitude">海拔：103.53米</string>
    <string name="fun_setting">功能设置</string>
    <string name="jtv_abtain">取证单位：</string>
    <string name="str_content">备注内容：</string>
    <string name="jtv_logitude_latitude">经纬度数：</string>
    <string name="title">电企通相机</string>
    <string name="app_name">电企通相机</string>

    <!--隐私政策-->
    <string name="privacy_exit">退出</string>
    <string name="privacy_agree">同意</string>
    <string name="users_note">用户须知</string>
    <string name="privacy_tips_key1">点击查看《隐私政策》</string>
    <string name="privacy_tips">欢迎您使用电企通相机，我们应最新的监管要求，特向您说明如下：
        \n1.为提供本应用的基本业务功能,在获得您的同意后，我们会开启您设备的摄像头、相册、位置、网络权限以为您提供服务。拒绝授权这些权限将影响您使用工程相机的全部功能。
        \n2.未经您的同意，我们不会从第三方获取、共享或对外提供您的信息。
        \n
        \n点击查看《隐私政策》
        \n
    </string>
    <string name="confirmed">用户须知已确认</string>
    <string name="opt_privacy">隐私政策</string>

</resources>
