<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_privacy_bg">

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/users_note"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/px_45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_privacy_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:text="@string/privacy_tips"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/px_30"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_note" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_tips" />

    <LinearLayout
        android:id="@+id/layout_to_do"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/line">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/privacy_exit"
            android:textColor="@color/colorGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.25dp"
            android:layout_height="40dp"
            android:background="@color/colorGray" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/privacy_agree"
            android:textColor="@color/colorOrange"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>